fix overflow on login/registration forms (on small screens)

--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -141,18 +141,6 @@ label:not(.checkbox-container) {
     font-weight: bold;
 }
 
-div#login, div#registration {
-    input {
-        height: 50px;
-        padding: 10px;
-        margin: 8px 0px;
-    
-        &[type=submit] {
-            font-weight: bold;
-        }
-    }
-}
-
 // inputs: checkmarks
 .checkbox-container {
     display: flex;
@@ -207,6 +195,7 @@ div#login, div#registration {
 div {
     &#login, &#registration {
         width: 400px;
+        max-width: 100%;
         margin: 0 auto;
 
         a {
@@ -216,6 +205,13 @@ div {
 
         input {
             width: 100%;
+            height: 50px;
+            padding: 10px;
+            margin: 8px 0px;
+        
+            &[type=submit] {
+                font-weight: bold;
+            }    
         }
     }
 }
